# E-commerceBackend

./: alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 14d57119abc8_add_timestamps_to_orders.py  629fe007726d_add_order_id_to_basket_items_table.py  b9762a6b930f_initial_migration.py  c5df512637af_test_migration.py
src/: main.py  settings.py
src/auth/: current_user.py
src/auth/access/: service.py
src/auth/base/: router.py  schemas.py  service.py
src/basket/: models.py  router.py  schemas.py  service.py
src/cart/: models.py  router.py  schemas.py  service.py
src/category/: models.py  router.py  schemas.py  service.py
src/complaint/: models.py  router.py  schemas.py  service.py
src/order/: models.py  mongo_models.py  router.py  schemas.py  service.py
src/product/: models.py  router.py  schemas.py  service.py
src/users/: models.py  router.py  schemas.py  service.py
src/utils/: exceptions.py  pagination.py  schemas.py  single_mongo_db.py  single_psql_db.py
