[tool.poetry]
name = "vals-hosting"
version = "0.1.0"
description = ""
authors = ["Ahmet <112516305+KimeRti@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
